objects/Account_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>ASM_Approval_Date__c</fullName>
        <label>ASM Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASM Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_ASM__c</fullName>
        <formula>Account__r.Area_Sales_Manager__r.FirstName +  &quot; &quot; + Account__r.Area_Sales_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ASM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_PSR__c</fullName>
        <formula>Account__r.Primary_PSR__r.FirstName + &quot; &quot; +  Account__r.Primary_PSR__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account PSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RSM__c</fullName>
        <formula>Account__r.RSM__r.FirstName + &quot; &quot; +   Account__r.RSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Approvals</relationshipLabel>
        <relationshipName>Account_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Executed_Final_Document_Comp_Date__c</fullName>
        <description>Actual Executed Final Documents Completion Date</description>
        <label>Actual Executed Final Document Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Executed_Term_Sheet_Comp_Date__c</fullName>
        <label>Actual Executed Term Sheet Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_First_Draft_Term_Sheet_Comp_Date__c</fullName>
        <description>Actual First  Draft Term Sheet Comp Date</description>
        <label>Actual First  Draft Term Sheet Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <label>Approval Request</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Flow Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Flow Opt In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Locator Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Locator Opt In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <label>Approval Step</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Approval Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Manager Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Set-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Tool Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Approvals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capital_Contribution_Investor__c</fullName>
        <label>Capital Contribution (Investor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DRC_Approval_to_Execute_Documents_Status__c</fullName>
        <label>DRC Approval to Execute Documents Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Name__c</fullName>
        <label>Deal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_DPA_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer DPA Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Approvals</relationshipLabel>
        <relationshipName>Account_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drawdown_End_Date__c</fullName>
        <label>Drawdown End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawdown_Start_Date__c</fullName>
        <label>Drawdown Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Executed_Final_Documents_Completion_Date__c</fullName>
        <label>Executed Final Documents Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Term_Sheet_Completion_Date__c</fullName>
        <label>Executed Term Sheet Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Status__c</fullName>
        <label>Final Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Approval_Date__c</fullName>
        <label>Finance Manager Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Notes__c</fullName>
        <label>Financing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financing_Probability__c</fullName>
        <label>Financing Probability</label>
        <picklist>
            <controllingField>Financing_Stage__c</controllingField>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Stage__c</fullName>
        <label>Financing Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Preliminary Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structuring &amp; Pre-Term Sheet Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Sheet Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inverted Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Levered Flip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Flip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale-Leaseback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Lessor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Leverage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Draft_Term_Sheet_Completion_Date__c</fullName>
        <label>First Draft Term Sheet Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Approval_Date__c</fullName>
        <label>Initial Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Approval_Date__c</fullName>
        <label>Marketing Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Partner_Type_Request_Status__c</fullName>
        <label>New Partner Type Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Partner_Type_Requested__c</fullName>
        <label>New Partner Type Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Authorized-Partner-Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized-Partner-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite-Partner-Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite-Partner-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner-Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier-Partner-Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier-Partner-Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_PSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary PSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Approvals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proceed_With_Lead_Flow_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proceed With Lead Flow Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Support12__c</fullName>
        <label>Project Finance Support2</label>
        <picklist>
            <picklistValues>
                <fullName>Rett Young</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christopher Porto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guthrie Dundas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David McIlhenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Dete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trevor Hill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Support1__c</fullName>
        <label>Project Finance Support1</label>
        <picklist>
            <picklistValues>
                <fullName>Rett Young</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christopher Porto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guthrie Dundas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David McIlhenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Dete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trevor Hill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Team_Lead__c</fullName>
        <label>Project Finance Team Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Andrew Dete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christopher Porto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David McIlhenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerhard Hinse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guthrie Dundas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trevor Hill</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Financing_Approval_Required__c</fullName>
        <label>Project Financing Approval Required</label>
        <picklist>
            <picklistValues>
                <fullName>Term Sheet Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRC Approval to Execute Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval of Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Financing_Status__c</fullName>
        <label>Term Sheet Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Tool_Access_Date__c</fullName>
        <label>Proposal Tool Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Approval_Request__c</controllingField>
            <picklistValues>
                <fullName>Dealer no longer selling SPWR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please describe in Suspension notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold non-SPWR product on SPWR lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supply_Enrollment_Approval_Date__c</fullName>
        <label>Supply Enrollment Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspension_Approval_Date__c</fullName>
        <label>Suspension Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Set_up_Approval_Date__c</fullName>
        <label>System Set-up Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_FMV__c</fullName>
        <label>Total FMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranch_A_Date__c</fullName>
        <label>Tranch A Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tranch_A__c</fullName>
        <label>Tranch A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranch_B_Date__c</fullName>
        <label>Tranch B Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tranch_B__c</fullName>
        <label>Tranch B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranch_C_Date__c</fullName>
        <label>Tranch C Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tranch_C__c</fullName>
        <label>Tranch C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranch_D_Date__c</fullName>
        <label>Tranch D Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tranch_D__c</fullName>
        <label>Tranch D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranch_E_Date__c</fullName>
        <label>Tranch E Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tranch_E__c</fullName>
        <label>Tranch E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranch_F_Date__c</fullName>
        <label>Tranch F Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tranch_F__c</fullName>
        <label>Tranch F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Capital__c</fullName>
        <label>Type of Capital</label>
        <picklist>
            <picklistValues>
                <fullName>Cash - Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax - Equity</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Approval</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Approvals</pluralLabel>
    <recordTypes>
        <fullName>Dealer_Score_Adjustment</fullName>
        <active>true</active>
        <description>Dealer Score Adjustment</description>
        <label>Dealer Score Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lease_Partner_Enablement</fullName>
        <active>true</active>
        <description>Lease Partner Enablement</description>
        <label>Lease Partner Enablement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Partner_Enablement</fullName>
        <active>true</active>
        <label>Loan Partner Enablement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Demotion</fullName>
        <active>true</active>
        <label>Partner Demotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Lead_Routing</fullName>
        <active>true</active>
        <description>Partner Lead Routing (Opt in or Opt Out)</description>
        <label>Partner Lead Routing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Management</fullName>
        <active>true</active>
        <description>Partner Management of Partner Type Downgrade</description>
        <label>Partner Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Multi_Site_Enablement</fullName>
        <active>true</active>
        <description>Partner Multi Site Enablement</description>
        <label>Partner Multi Site Enablement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Promotion</fullName>
        <active>true</active>
        <description>Partner General Approvals</description>
        <label>Partner General Approvals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Financing</fullName>
        <active>true</active>
        <description>Project Financing Tracking.</description>
        <label>Project Financing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Must_Be_From_Account_Selected</fullName>
        <active>true</active>
        <errorConditionFormula>$User.ByPassValidation__c = false &amp;&amp; IF( AND( NOT(ISBLANK(  Dealer_DPA_Recipient__c  ) ) , NOT( ISBLANK(  Dealer_DPA_Recipient__r.Id )) ) , IF(  Account__r.Id !=  Dealer_DPA_Recipient__r.Account.Id  , true , false) , false)</errorConditionFormula>
        <errorDisplayField>Dealer_DPA_Recipient__c</errorDisplayField>
        <errorMessage>Choose a contact from the Account</errorMessage>
    </validationRules>
</CustomObject>